--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,22 @@
-FROM python:3.10.10 AS builder
+# Use official Python base image
+FROM python:3.10-slim
 
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1
+
+# Set working directory
 WORKDIR /app
 
+# Copy requirements file and install dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-RUN python -m venv .venv
-COPY requirements.txt ./
-RUN .venv/bin/pip install -r requirements.txt
-FROM python:3.10.10-slim
-WORKDIR /app
-COPY --from=builder /app/.venv .venv/
+
+# Copy the rest of your code
 COPY . .
-CMD ["/app/.venv/bin/fastapi", "run"]
+COPY Data /app/Data
+
+
+# Expose FastAPI default port
+EXPOSE 8000
+
+# Start the FastAPI app
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
