--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -11,8 +11,8 @@ primary_region = 'bom'
 [http_service]
   internal_port = 8000
   force_https = true
-  auto_stop_machines = true
-  auto_start_machines = false
+  auto_stop_machines = false
+  auto_start_machines = true
   min_machines_running = 1
   processes = ['app']
 
