--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -9,10 +9,10 @@ primary_region = 'bom'
 [build]
 
 [http_service]
-  internal_port = 8000
+  internal_port = 8080
   force_https = true
-  auto_stop_machines = false
-  auto_start_machines = true
+  auto_stop_machines = true
+  auto_start_machines = false
   min_machines_running = 1
   processes = ['app']
 
