--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for docquery on 2025-07-18T22:14:09+05:30
+# fly.toml app configuration file generated for docquerytest on 2025-10-23T13:13:29Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'docquery'
+app = 'docquerytest'
 primary_region = 'bom'
 
 [build]
@@ -11,12 +11,13 @@ primary_region = 'bom'
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
-  auto_start_machines = false
-  min_machines_running = 1
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
   processes = ['app']
 
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
