--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -3,13 +3,13 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'docquerytest'
+app = 'docquery'
 primary_region = 'bom'
 
 [build]
 
 [http_service]
-  internal_port = 8000
+  internal_port = 8080
   force_https = true
   auto_stop_machines = false
   auto_start_machines = true
