--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -11,9 +11,9 @@ primary_region = 'bom'
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = false
-  auto_start_machines = true
-  min_machines_running = 1
+  auto_stop_machines = true
+  auto_start_machines = false
+  min_machines_running = 0
   processes = ['app']
 
 [[vm]]
